-
Bug
-
Resolution: Done
-
Not Evaluated
-
5.3.0 Beta1, 5.4.0 Beta
-
None
-
Windows MinGW 64, gcc 4.9
-
b5d82dbedbcfd290cba022a52656f9c208d11d65
At qtscript: 14710df8fa3b8c31cdbf0243d268a006e667e13a :
In file included from c:/mingw/mingw32/i686-w64-mingw32/include/c++/random:51:0,
from c:/mingw/mingw32/i686-w64-mingw32/include/c++/bits/stl_algo.h:66,
from c:/mingw/mingw32/i686-w64-mingw32/include/c++/algorithm:62,
from ..\3rdparty\javascriptcore\JavaScriptCore/wtf/RefPtr.h:24,
from ..\3rdparty\javascriptcore\JavaScriptCore/wtf/HashFunctions.h:24,
from ..\3rdparty\javascriptcore\JavaScriptCore/wtf/HashTraits.h:24,
from ..\3rdparty\javascriptcore\JavaScriptCore\runtime\JSValue.h:32,
from ..\3rdparty\javascriptcore\JavaScriptCore\runtime\JSImmediate.h:33,
from ..\3rdparty\javascriptcore\JavaScriptCore\runtime\JSImmediate.cpp:22:
c:/mingw/mingw32/i686-w64-mingw32/include/c++/bits/random.tcc: In member function 'std::gamma_distribution<_RealType>::result_type std::gamma_distribution<_RealType>::operator()(_UniformRandomNumberGenerator&, const std::gamma_distribution<_RealType>::param_type&)':
c:/mingw/mingw32/i686-w64-mingw32/include/c++/bits/random.tcc:2523:14: error: 'wtf_pow' is not a member of 'std'
return (std::pow(__u, result_type(1.0) / __param.alpha())
^
c:/mingw/mingw32/i686-w64-mingw32/include/c++/bits/random.tcc:2523:14: note: suggested alternative:
In file included from ..\3rdparty\javascriptcore\JavaScriptCore\runtime\JSImmediate.h:31:0,
from ..\3rdparty\javascriptcore\JavaScriptCore\runtime\JSImmediate.cpp:22:
..\3rdparty\javascriptcore\JavaScriptCore/wtf/MathExtras.h:210:15: note: 'wtf_pow'
inline double wtf_pow(double x, double y)
^
In file included from c:/mingw/mingw32/i686-w64-mingw32/include/c++/random:51:0,
from c:/mingw/mingw32/i686-w64-mingw32/include/c++/bits/stl_algo.h:66,
from c:/mingw/mingw32/i686-w64-mingw32/include/c++/algorithm:62,
from ..\3rdparty\javascriptcore\JavaScriptCore/wtf/RefPtr.h:24,
from ..\3rdparty\javascriptcore\JavaScriptCore/wtf/HashFunctions.h:24,
from ..\3rdparty\javascriptcore\JavaScriptCore/wtf/HashTraits.h:24,
from ..\3rdparty\javascriptcore\JavaScriptCore\runtime\JSValue.h:32,
from ..\3rdparty\javascriptcore\JavaScriptCore\runtime\JSImmediate.h:33,
from ..\3rdparty\javascriptcore\JavaScriptCore\runtime\JSImmediate.cpp:22:
c:/mingw/mingw32/i686-w64-mingw32/include/c++/bits/random.tcc: In member function 'void std::gamma_distribution<_RealType>::__generate_impl(_ForwardIterator, _ForwardIterator, _UniformRandomNumberGenerator&, const std::gamma_distribution<_RealType>::param_type&)':
c:/mingw/mingw32/i686-w64-mingw32/include/c++/bits/random.tcc:2589:18: error: 'wtf_pow' is not a member of 'std'
*__f++ = (std::pow(__u, result_type(1.0) / __param.alpha())
^
c:/mingw/mingw32/i686-w64-mingw32/include/c++/bits/random.tcc:2589:18: note: suggested alternative:
In file included from ..\3rdparty\javascriptcore\JavaScriptCore\runtime\JSImmediate.h:31:0,
from ..\3rdparty\javascriptcore\JavaScriptCore\runtime\JSImmediate.cpp:22:
..\3rdparty\javascriptcore\JavaScriptCore/wtf/MathExtras.h:210:15: note: 'wtf_pow'
inline double wtf_pow(double x, double y)
^
In file included from c:/mingw/mingw32/i686-w64-mingw32/include/c++/random:51:0,
from c:/mingw/mingw32/i686-w64-mingw32/include/c++/bits/stl_algo.h:66,
from c:/mingw/mingw32/i686-w64-mingw32/include/c++/algorithm:62,
from ..\3rdparty\javascriptcore\JavaScriptCore/wtf/RefPtr.h:24,
from ..\3rdparty\javascriptcore\JavaScriptCore/wtf/HashFunctions.h:24,
from ..\3rdparty\javascriptcore\JavaScriptCore/wtf/HashTraits.h:24,
from ..\3rdparty\javascriptcore\JavaScriptCore\runtime\JSValue.h:32,
from ..\3rdparty\javascriptcore\JavaScriptCore\runtime\JSImmediate.h:33,
from ..\3rdparty\javascriptcore\JavaScriptCore\runtime\JSImmediate.cpp:22:
c:/mingw/mingw32/i686-w64-mingw32/include/c++/bits/random.tcc: In member function 'std::weibull_distribution<_RealType>::result_type std::weibull_distribution<_RealType>::operator()(_UniformRandomNumberGenerator&, const std::weibull_distribution<_RealType>::param_type&)':
c:/mingw/mingw32/i686-w64-mingw32/include/c++/bits/random.tcc:2649:19: error: 'wtf_pow' is not a member of 'std'
return __p.b() * std::pow(-std::log(result_type(1) - __aurng()),
^
c:/mingw/mingw32/i686-w64-mingw32/include/c++/bits/random.tcc:2649:19: note: suggested alternative:
In file included from ..\3rdparty\javascriptcore\JavaScriptCore\runtime\JSImmediate.h:31:0,
from ..\3rdparty\javascriptcore\JavaScriptCore\runtime\JSImmediate.cpp:22:
..\3rdparty\javascriptcore\JavaScriptCore/wtf/MathExtras.h:210:15: note: 'wtf_pow'
inline double wtf_pow(double x, double y)
^
In file included from c:/mingw/mingw32/i686-w64-mingw32/include/c++/random:51:0,
from c:/mingw/mingw32/i686-w64-mingw32/include/c++/bits/stl_algo.h:66,
from c:/mingw/mingw32/i686-w64-mingw32/include/c++/algorithm:62,
from ..\3rdparty\javascriptcore\JavaScriptCore/wtf/RefPtr.h:24,
from ..\3rdparty\javascriptcore\JavaScriptCore/wtf/HashFunctions.h:24,
from ..\3rdparty\javascriptcore\JavaScriptCore/wtf/HashTraits.h:24,
from ..\3rdparty\javascriptcore\JavaScriptCore\runtime\JSValue.h:32,
from ..\3rdparty\javascriptcore\JavaScriptCore\runtime\JSImmediate.h:33,
from ..\3rdparty\javascriptcore\JavaScriptCore\runtime\JSImmediate.cpp:22:
c:/mingw/mingw32/i686-w64-mingw32/include/c++/bits/random.tcc: In member function 'void std::weibull_distribution<_RealType>::__generate_impl(_ForwardIterator, _ForwardIterator, _UniformRandomNumberGenerator&, const std::weibull_distribution<_RealType>::param_type&)':
c:/mingw/mingw32/i686-w64-mingw32/include/c++/bits/random.tcc:2668:23: error: 'wtf_pow' is not a member of 'std'
*__f++ = __p.b() * std::pow(-std::log(result_type(1) - __aurng()),
^
c:/mingw/mingw32/i686-w64-mingw32/include/c++/bits/random.tcc:2668:23: note: suggested alternative:
In file included from ..\3rdparty\javascriptcore\JavaScriptCore\runtime\JSImmediate.h:31:0,
from ..\3rdparty\javascriptcore\JavaScriptCore\runtime\JSImmediate.cpp:22:
..\3rdparty\javascriptcore\JavaScriptCore/wtf/MathExtras.h:210:15: note: 'wtf_pow'
inline double wtf_pow(double x, double y)
^
mingw32-make[3]: *** [obj/debug/debug/JSImmediate.o] Error 1
mingw32-make[2]: *** [debug] Error 2
mingw32-make[1]: *** [sub-script-make_first-ordered] Error 2
mingw32-make: *** [sub-src-make_first] Error 2
There is a #define pow wtf_pow in MathExtras.h, somehow this now triggers in the system headers.
- is required for
-
QTBUG-41077 Issues to be fixed before 5.4.0 beta release
-
- Closed
-
- relates to
-
QTBUG-41516 QtWebEngine build not skipped if required dependencies are missing
-
- Closed
-