Fix MinGW64 build

Task-number: QTBUG-41673
Change-Id: Ic3aa8efefb0425bd68500043e7f44b72cce51313
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@digia.com>